--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,8 @@
 canvas{
     margin-left: 500px;
     margin-top: 50px;
+    border: 10px solid black;
+    border-radius:15px;
 }
 body{
     background-image: url("../img/hogwarts.jpg");
