--- a/styles/style.css
+++ b/styles/style.css
@@ -7,5 +7,10 @@ canvas{
 body{
     background-image: url("../img/hogwarts.jpg");
     /*background-size:cover;*/
-    background-size:50%
+    background-size:50%;
+    cursor: url('../img/wand-cursor.png'),auto;
+}
+.cursor{
+    width: 32px;
+    height: 32px;
 }
