--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,7 @@ canvas{
     margin-top: 50px;
     border: 10px solid black;
     border-radius:15px;
+    background-color:white
 }
 body{
     background-image: url("../img/hogwarts.jpg");
