--- a/styles/style.css
+++ b/styles/style.css
@@ -1,11 +1,20 @@
 canvas{
-    margin-left: 500px;
-    margin-top: 50px;
+    margin-left: 400px;
+    
+    margin-top:50px;
     border: 10px solid black;
     border-radius:15px;
-    background-color:white
+    background-color:white;
+      width: 50%;
+}
+#Starting-Screen{
+     border: 10px dashed white;
+   
+    border-radius:15px;
 }
 body{
+   
+    text-align: center;
     background-image: url("../img/hogwarts.jpg");
     /*background-size:cover;*/
     background-size:50%;
@@ -19,8 +28,11 @@ body{
     height: 140px;
     width:240px;
     background-color:grey;
-    margin-left:830px;
-    margin-top:20px;
+  margin-left:100px;
+    margin-right: 20px;
+    margin-top:100px;
+   float:left;
+  
    padding-top: 5px;
    padding-left:10px;
     font-family:  Arial, sans-serif,  Harry Potter;
@@ -95,3 +107,100 @@ body{
     .start-button:hover{
         background-color: gold;
     }
+    .Ending-Screen{
+    background-color: black;
+    font-family: Harry Potter;
+    font-size: 30px;
+    width: 959px;
+    height: 877px;
+     margin-left: 500px;
+    margin-top: 50px;
+    color:white;
+    text-align: center;
+    padding-top: 20px;
+    border: 10px dashed white;
+      border-radius:15px;
+
+}
+.buttons{
+           
+              /*  border:10px solid rgb(0, 47, 255);*/
+}
+.win{
+    
+      background-color: black;
+    color: white;
+   
+    width: 959px;
+    height: 700px;
+    font-size: 100px;
+       border-radius:15px;
+       padding-top: 25px;
+  
+       /*align-items: center;*/
+       margin-top: 70px;
+}
+.lose{
+         background-color: black;
+    color: white;
+
+    width: 959px;
+    height: 700px;
+    font-size: 100px;
+       border-radius:15px;
+       padding-top: 25px;
+  
+       /*align-items: center;*/
+       margin-top: 70px;
+}
+       
+.restart{
+  
+/*margin-left:600px;*/
+float:right;
+
+     height: 70px;
+    width: 280px;
+font-size:200%;
+background-color:white;
+ color:black;
+ border-radius:15px;
+ margin-right: 10px;
+
+}
+.linkedin-button{
+ float:left;
+  /*  border:10px inset rgb(0, 47, 255);
+    border-radius:15px;*/
+     display: inline-flex;
+     margin-left: 20px;
+}
+
+input{
+   
+    background-color: #0e76a8 ;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size:100%;
+    color:white;
+    height: 50px;
+    width: 150px;
+      display: inline-flex;
+}
+.linkedin-button :hover{
+    background-color: white;
+}
+
+#volumen-on{
+ 
+   width:80px;
+   /* margin-top:380px;*/
+     /*margin-right: 20px;*/
+/*float:left;*/
+}
+/*.panel{
+    width:50px;
+    display: flex;
+    flex-direction: column;
+   /* justify-content: center;
+    border:20px solid red;
+}*/
